Use Switch to route layout to prevent multiple main routes being shown from layout
Note:
  => Added back in padding to graph-container since now content is not rendered on the homepage at all, and thus no extra margin is on the homepage

--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -17,7 +17,7 @@
 }
 
 .graph-container {
-  padding: 5rem 0 0;
+  padding: 5rem 0 3rem;
 }
 
 .alternate-container-fluid {
